# course_work_5_databases

./: README.md  main.py  pyproject.toml
src/: DBManager.py  HHData.py
