[tool.poetry]
name = "pythonproject8"
version = "0.1.0"
description = ""
authors = ["Alyona Starkova <alyona.starrkova@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
